Fixes
-Added: OotWS quick link
-Added: SkyGazer demo video
-Fixed: OotWS logo too small/uncentered on mobile
-Fixed: HTML validation
-Fixed: bad cropping for social media icons
-Changed: 'Professional' -> 'About'
-Removed: school quick links
-Removed: unused old page

--- a/nch/assets/styles/slideshow.css
+++ b/nch/assets/styles/slideshow.css
@@ -50,7 +50,8 @@
   
 .caption-container {
     text-align: center;
-    background-color: var(--deep-blue);
+    background: linear-gradient(180deg, var(--deep-blue), var(--dark-blue));
+    border: 2px groove var(--deep-blue);
     padding: 2px 16px;
     color: white;
 }
