--- a/nch/assets/styles/window.css
+++ b/nch/assets/styles/window.css
@@ -14,6 +14,7 @@ div.floating {
 }
 
 div.logo-holder {
+    min-width: 23.5em;
     width: 50%;
     margin: 0 auto;
     margin-top: 5em;
